Compare what a lack says, not the route an argument took to it
A lack is a claim: these blocks are left nothing. Which blocks were read
to show it, and in what order their values went, is how the claim was
reached. Held as one, the two made a lack that two readings could show
along different routes into two lacks, and a choice between two readings
that each leave one block no value was reported as refused nowhere in
particular — a reading holding something where both of its alternatives
hold nothing.

So the removals leave the lack and become the evidence beside it. What a
refusal is compared by is its lacks; what a report may name is those
blocks and the ones the values went to, which is what an author is sent
to read. A block left nothing because its neighbours were left one value
each is a place whose own rules are fine with what they leave it, so the
route is what makes such a report useful and the claim is what makes two
of them one.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>